<resources>
    <string name="app_name">GoBiblio</string>
    <string name="message_splash">Welcome to</string>
    <string name="welcome">Welcome to<br />GoBiblio</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in_message">Already have an account?</string>
    <string name="sign_in"><b><u>Sign In</u></b></string>
    <string name="sign_in_btn">Sign In</string>
    <string name="greeting">Glad to see you back</string>
    <string name="sign_up_message">Don\'t have an account?</string>
    <string name="sign_up"><b><u>Sign Up</u></b></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_dialog">Enter your registered email below to receive the password reset link.</string>
    <string name="send_link">Send Link</string>
    <string name="close_dialog">Back to Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="library">Library</string>
    <string name="ask_name">What should we call you?</string>
    <string name="onboard_message">Hey! You must be new here</string>
    <string name="name">Full name</string>
    <string name="ask_photo">Share your picture with us</string>
    <string name="upload_photo">Choose picture</string>
    <string name="skip">SKIP</string>
    <string name="go">Go</string>
    <string name="edit">Edit</string>
    <string name="default_name">Daily Reader</string>
    <string name="default_email">d.reader@gobiblio.com</string>
    <string name="edit_profile">Edit your profile</string>
    <string name="edit_name">What should we call you?</string>
    <string name="close_dialog2">Back to Profile</string>
    <string name="save">Save changes</string>
    <string name="about_gobiblio">About GoBiblio</string>
    <string name="change_password">Change Password</string>
    <string name="share_app">Share the App</string>
    <string name="rate_app">Rate the App</string>
    <string name="report_bug">Report a bug</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="hold_on">Hold on…</string>
    <string name="change_password_dialog">Changing password after every 90 days keeps you safe!</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="password_changed">Password changed successfully!</string>
</resources>