<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:cnb_backgroundColor="@color/colorYellow"
        app:cnb_iconColor="@color/colorWhite" />

    <item
        android:id="@+id/library"
        android:icon="@drawable/ic_library"
        android:title="@string/library"
        app:cnb_backgroundColor="@color/colorYellow"
        app:cnb_iconColor="@color/colorWhite" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:cnb_backgroundColor="@color/colorYellow"
        app:cnb_iconColor="@color/colorWhite" />


</menu>