<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-40dp"
        android:layout_marginEnd="-40dp"
        android:background="#E6121212"
        android:elevation="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/layout_main"
        app:layout_constraintEnd_toEndOf="@id/layout_main"
        app:layout_constraintStart_toStartOf="@id/layout_main"
        app:layout_constraintTop_toTopOf="@id/layout_main"
        tools:targetApi="lollipop">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_bg"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/edit_name"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/name"
            android:textColorHint="@color/colorBlack"
            app:boxStrokeColor="@color/colorBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_currentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp">

            <ImageView
                android:id="@+id/img_currentProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/alert_bg"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/blank_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_choose"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="44dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_bg"
                android:text="@string/upload_photo"
                android:textAllCaps="false"
                android:translationZ="1dp"
                app:layout_constraintBottom_toBottomOf="@id/img_currentProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_currentProfile"
                app:layout_constraintTop_toTopOf="@id/img_currentProfile" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="72dp"
            android:background="@drawable/button_bg"
            android:padding="12dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/close_dialog2"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>